{
    "name": "Deneme",
    "maps": [
        {
            "name": "Swipe",
            "id": "86a102d9-ce90-4d9f-b1c9-fa85f901d9ad",
            "actions": [
                {
                    "name": "Touch",
                    "type": "Button",
                    "id": "0d3fd261-ca87-427e-96ea-44df1adcb093",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "547c7cf1-6272-4f81-b55b-87319b867c23",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c852fd4-6167-486f-ac59-969fb88be8e5",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a565e74-9ea2-450d-9951-ad325496a05b",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}