{
    "name": "InputActions",
    "maps": [
        {
            "name": "Swipe",
            "id": "0f2321c9-80ba-4abe-996e-5158f3db643f",
            "actions": [
                {
                    "name": "Touch",
                    "type": "PassThrough",
                    "id": "a1850d53-5bdf-4dc1-a4c6-9fbb54650afb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "One Modifier",
                    "id": "622aebdf-11ac-4280-bf1a-333f6e13420b",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "339d8df8-1e09-4bdc-93a2-5f4a182eeb8f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "e4d92371-f1f9-4ae4-8677-447c25c9609e",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Touch",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Touch",
            "id": "f5534734-7a20-4e49-8f27-2c0263fdf477",
            "actions": [
                {
                    "name": "PrimaryContact",
                    "type": "Button",
                    "id": "420e4f7f-9c5e-4115-ba67-025013001c94",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "c4104e11-e1e5-4cc9-ae45-f0233792f1ab",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "79822d77-457d-430e-a666-74cd24d704cb",
                    "path": "<Touchscreen>/touch0/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d086562b-cb2d-4b15-989e-863d9a398389",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Phone",
            "bindingGroup": "Phone",
            "devices": []
        }
    ]
}